# Django-Wagtail-Tuts

./: README.md  example.sqlite3  pyproject.toml
blog_site/: models.py  urls.py  views.py
blog_site/migrations/: 0001_initial.py  0002_articlepage.py  0003_articletag_articlepage_tags.py  0004_articlepage_views.py
core/: settings.py  urls.py
home/: urls.py  views.py
templates/blog_site/: article_page.html  blog_page.html
templates/cotton/: article_card.html  article_viewcount.html  button_pills.html  search_bar.html
templates/cotton/icons/: eye.html  facebook.html  search.html  twitter.html
templates/cotton/layouts/: base.html
templates/cotton/social_media/: fb_pill.html  pill.html  twitter_pill.html
