[project]
name = "django-wagtail-tuts"
version = "0.1.0"
description = "A simple django wagtail blog site"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "django-allauth>=65.5.0",
    "django-cleanup>=9.0.0",
    "django-cotton>=2.0.1",
    "django-htmx>=1.23.0",
    "wagtail>=6.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
